# system_monitor

./: .gitignore  .gitleaks.toml  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COMPLETION_REPORT.md  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SBOM.yaml  SECURITY.md  SECURITY_AUDIT_REPORT.md  build.ps1
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  DEMO_INSTRUCTIONS.md  GITHUB_SETUP.md
examples/: .sysmonrc
include/: Configuration.h  IProcessCollector.h  ISystemCollector.h  MonitorUI.h  ProcessInfo.h  ProcessTreeBuilder.h  SystemDataCollector.h  SystemMetrics.h
src/: main.cpp
src/config/: Configuration.cpp
src/core/: ProcessTreeBuilder.cpp  SystemDataCollector.cpp
src/platform/linux/: LinuxProcessCollector.cpp  LinuxSystemCollector.cpp
src/platform/macos/: MacOSProcessCollector.cpp  MacOSSystemCollector.cpp
src/platform/windows/: WindowsProcessCollector.cpp  WindowsSystemCollector.cpp
src/ui/: DiskWidget.cpp  MonitorUI.cpp
